--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
 </script>
 
 <div id="style-sheets">
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="/styles/index.css" />
 </div>
 
 <div id="main-content">
